--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(OTO_SRCS
 set(MOTOR_SRCS
 	run_motor.cpp
 	hardware/MotorControl.cpp
+	utils/Worker.cpp
 )
 
 set(COMMON_LIBS pthread i2c pigpio rt)
@@ -19,5 +20,5 @@ target_include_directories(oto_pi PRIVATE hardware)
 target_link_libraries(oto_pi PRIVATE ${COMMON_LIBS})
 
 target_sources(run_motor PRIVATE ${MOTOR_SRCS})
-target_include_directories(run_motor PRIVATE hardware)
+target_include_directories(run_motor PRIVATE hardware utils)
 target_link_libraries(run_motor PRIVATE ${COMMON_LIBS})
