--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(run_motor)
 
 set(OTO_SRCS
 	oto_pi.cpp
+	hardware/I2cAccessor.cpp
 	hardware/PressureSensor.cpp
 	hardware/MagnetSensor.cpp
 )
