--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,22 +9,14 @@ set(MOTOR_SRCS
 	run_motor.cpp
 )
 
-set(HARDWARE_SRCS
-	hardware/I2cAccessor.cpp
-	hardware/MagnetSensor.cpp
-	hardware/PressureSensor.cpp
-	hardware/MotorControl.cpp
-)
-
-add_library(hardware STATIC ${HARDWARE_SRCS})
-target_include_directories(hardware PRIVATE hardware utils)
+add_subdirectory("hardware")
 
 set(COMMON_LIBS pthread i2c pigpio rt hardware)
 
 target_sources(oto_pi PRIVATE ${OTO_SRCS})
-target_include_directories(oto_pi PRIVATE hardware utils)
+target_include_directories(oto_pi PRIVATE hardware/include)
 target_link_libraries(oto_pi PRIVATE ${COMMON_LIBS})
 
 target_sources(run_motor PRIVATE ${MOTOR_SRCS})
-target_include_directories(run_motor PRIVATE hardware utils)
+target_include_directories(run_motor PRIVATE hardware/include)
 target_link_libraries(run_motor PRIVATE ${COMMON_LIBS})
