Add irrigation zone recording

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(oto_pi)
 add_executable(run_motor)
+add_executable(create_zone)
 
 set(OTO_SRCS
 	oto_pi.cpp
@@ -21,3 +22,7 @@ target_link_libraries(oto_pi PRIVATE ${COMMON_LIBS})
 target_sources(run_motor PRIVATE ${MOTOR_SRCS})
 target_include_directories(run_motor PRIVATE hardware/include)
 target_link_libraries(run_motor PRIVATE ${COMMON_LIBS})
+
+target_sources(create_zone PRIVATE create_zone.cpp)
+target_include_directories(create_zone PRIVATE hardware/include irrigation/include)
+target_link_libraries(create_zone PRIVATE ${COMMON_LIBS} irrigation)
