--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "unordered_map": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "future": "cpp"
+        "future": "cpp",
+        "iomanip": "cpp"
     }
 }
