--- a/src/irrigation/CMakeLists.txt
+++ b/src/irrigation/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(IRRIGATION_SRCS
+    lib/PolygonApplicator.cpp
     lib/Sprinkler.cpp
 	lib/Zone.cpp
 )
@@ -6,6 +7,7 @@ set(IRRIGATION_SRCS
 add_library(irrigation STATIC ${IRRIGATION_SRCS})
 target_include_directories(irrigation PUBLIC include 
 ../hardware/include
+../utils/include
 )
 
 # Tests
@@ -14,7 +16,7 @@ set(TEST_TARGET irrigation_test)
 file(GLOB TEST_SOURCES test/*.cpp)
 add_executable(${TEST_TARGET} ${TEST_SOURCES})
 target_include_directories(${TEST_TARGET} PUBLIC include)
-target_link_libraries(${TEST_TARGET} irrigation gtest_main pthread)
+target_link_libraries(${TEST_TARGET} irrigation utils gtest_main pthread)
 
 include(GoogleTest)
 gtest_discover_tests(${TEST_TARGET})
