--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -23,7 +23,13 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install required libs
-      run: sudo apt-get install pigpio libi2c-dev
+      run: |
+        sudo apt-get install libi2c-dev
+        wget https://github.com/joan2937/pigpio/archive/master.zip
+        unzip master.zip
+        cd pigpio-master
+        make
+        sudo make install
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
