--- a/src/hardware/CMakeLists.txt
+++ b/src/hardware/CMakeLists.txt
@@ -8,3 +8,5 @@ set(HARDWARE_SRCS
 
 add_library(hardware STATIC ${HARDWARE_SRCS})
 target_include_directories(hardware PUBLIC include ../utils/include)
+target_link_libraries(hardware i2c pigpio pthread)
+
