--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -73,13 +73,13 @@ jobs:
         # echo "Run, Build Application using script"
         # sudo ./tools/buildscript.sh
         
-        apt-get install -y libi2c-dev
+        sudo apt-get install -y libi2c-dev
 
         wget https://github.com/joan2937/pigpio/archive/master.zip
         unzip master.zip
         cd pigpio-master
         make
-        make install
+        sudo make install
         
         cmake -B ./build -DCMAKE_BUILD_TYPE=Release
         cmake --build ./build --config Release
