--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -16,8 +16,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron: '27 13 * * 6'
 
 jobs:
   analyze:
@@ -75,13 +73,14 @@ jobs:
         
         sudo apt-get install -y libi2c-dev
 
+        cd ..
         wget https://github.com/joan2937/pigpio/archive/master.zip
         unzip master.zip
         cd pigpio-master
         make
         sudo make install
-        cd ..
         
+        cd ${{github.workspace}}
         cmake -B ./build -DCMAKE_BUILD_TYPE=Release
         cmake --build ./build --config Release
 
