Add MQTT. Create main oto_pi app.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,11 @@
         "variant": "cpp",
         "vector": "cpp",
         "future": "cpp",
-        "iomanip": "cpp"
-    }
+        "iomanip": "cpp",
+        "mqttclient.h": "c",
+        "websocket.h": "c"
+    },
+    "cSpell.words": [
+        "Mqtt"
+    ]
 }
