--- a/.github/workflows/build-test-analyse.yml
+++ b/.github/workflows/build-test-analyse.yml
@@ -33,12 +33,21 @@ jobs:
 
     - name: Install required libs
       run: |
-        sudo apt-get install -y libi2c-dev
+        sudo apt-get install -y libi2c-dev libssl-dev
+        
         wget https://github.com/joan2937/pigpio/archive/master.zip
         unzip master.zip
         cd pigpio-master
         make
         sudo make install
+        cd ..
+
+        git clone https://github.com/eclipse/paho.mqtt.c
+        cd paho.mqtt.c
+        git checkout v1.3.1
+        cmake -Bbuild -H.
+        sudo cmake --build build/ --target install
+        cd ..
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
