--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,37 @@
         "future": "cpp",
         "iomanip": "cpp",
         "mqttclient.h": "c",
-        "websocket.h": "c"
+        "websocket.h": "c",
+        "algorithm": "cpp",
+        "charconv": "cpp",
+        "coroutine": "cpp",
+        "resumable": "cpp",
+        "format": "cpp",
+        "forward_list": "cpp",
+        "fstream": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stack": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp",
+        "unordered_set": "cpp",
+        "utility": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocbuf": "cpp",
+        "xlocinfo": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
+        "xmemory": "cpp",
+        "xstring": "cpp",
+        "xtr1common": "cpp",
+        "xutility": "cpp"
     },
     "cSpell.words": [
         "Mqtt"
